<resources>
    <!-- App -->
    <string name="app_name">Plan Alimenticio</string>

    <string name="nav_list">Listado</string>
    <string name="nav_table">Tabla</string>
    <string name="nav_generator">Generador</string>

    <string name="toolbar_txt_categories">Categorías</string>
    <string name="toolbar_txt_table">Tabla de control</string>
    <string name="toolbar_txt_generator">Dietas existentes</string>
    <string name="toolbar_txt_buildDiet">Generador de dieta</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Images -->
    <string name="image_loader">Image Loader</string>

    <!-- Buttons -->
    <string name="button_category">Categorias   #</string>
    <string name="button_close">Cerrar</string>
    <string name="button_accept">Aceptar</string>
    <string name="button_number_meals">Número de comidas al dia: %d</string>
    <string name="button_clean">Limpiar</string>
    <string name="button_save">Guardar</string>
    <string name="button_add">Agregar</string>

    <!-- Text table -->
    <string name="table_first">Desayuno</string>
    <string name="table_mix">colacion</string>
    <string name="table_third">Comida</string>
    <string name="table_fifth">Cena</string>


    <string-array name="table_category">
        <item>Verduras</item>
        <item>Frutas</item>
        <item>Alimentos de origen animal</item>
        <item>Leguminosas</item>
        <item>Leche o Yogurt</item>
        <item>Cereales sin grasa</item>
        <item>Aceites y grasas</item>
        <item>Aceite y grasa con proteína</item>
    </string-array>

    <!-- dialogs -->
    <string name="dialog_change_portion">¿Cuál es el número de porciones que deseas implementar en esta categoria?</string>
    <string name="dialog_change_quantity">¿Cuál es el número de porciones para esta comida?</string>
    <string name="dialog_change_meals">¿Cuál es el número de comidas que deseas realizar al día?</string>
    <string name="dialog_error_meals">Has alcanzado el número máximo de comidas permitido</string>
    <string name="dialog_error_portion">Has alcanzado el número máximo de porciones permitido por categoría</string>
    <string name="dialog_error_quantity">Has alcanzado las porción máxima de la categoría</string>
    <string name="dialog_ask_name_file">¿Qué nombre quieres darle al archivo?</string>

    <!-- Content descriptions -->
    <string name="content_image">Imagen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>