<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_alert"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_8dp">

    <!-- Contenido del cuadro de diálogo -->
    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_title_alert"
        android:text="@string/dialog_ask_name_file"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/txt_description_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_alert"
        android:inputType="text"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:hint="@string/content_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_close"
            android:layout_marginTop="@dimen/margin_16dp"
            style="@style/Button_dialog"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:layout_marginTop="@dimen/margin_16dp"
            style="@style/Button_dialog"/>

    </LinearLayout>


</LinearLayout>

