<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_category">

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.liftechnology.planalimenticio.ui.view.category.CategoryFragment"
        android:label="@string/nav_list"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_navigation_category_to_detailsCategoryFragment"
            app:destination="@id/detailsCategoryFragment"
            app:enterAnim="@anim/to_center"
            app:exitAnim="@anim/from_center"
            app:popEnterAnim="@anim/to_center"
            app:popExitAnim="@anim/from_center" />
    </fragment>

    <fragment
        android:id="@+id/navigation_table"
        android:name="com.liftechnology.planalimenticio.ui.view.table.TableFragment"
        android:label="@string/nav_table"
        tools:layout="@layout/fragment_table" />

    <fragment
        android:id="@+id/navigation_generator"
        android:name="com.liftechnology.planalimenticio.ui.view.generator.GeneratorFragment"
        android:label="@string/nav_generator"
        tools:layout="@layout/fragment_generator" />


    <fragment
        android:id="@+id/detailsCategoryFragment"
        android:name="com.liftechnology.planalimenticio.ui.view.category.DetailsCategoryFragment"
        android:label="DetailsCategoryFragment" >

        <argument
            android:name="arg"
            app:argType="com.liftechnology.planalimenticio.data.network.models.response.CategoryResponse" />
    </fragment>
</navigation>